--- a/Quiz/package.json
+++ b/Quiz/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/fiber": "^8.17.10",
     "framer-motion": "^11.11.13",
     "gsap": "^3.12.5",
     "react": "^18.3.1",
