--- a/Quiz/package.json
+++ b/Quiz/package.json
@@ -16,6 +16,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0",
+    "react-tsparticles": "^2.12.2",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "three": "^0.170.0"
